Fixed section one alignment, only bot is centered

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
 .section-one {
     display: flex;
     flex-direction: column;
-    align-self: center;
     background: #1F2937;
     color: white;
     padding: 0 600px;
@@ -22,7 +21,7 @@ body {
 .section-one .top {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
     padding-bottom: 50px;
 }
 
@@ -41,6 +40,7 @@ body {
 
 .section-one .bot {
     display: flex;
+    align-self: center;
     margin-bottom: 100px;
     gap: 400px;
 }
@@ -77,8 +77,6 @@ body {
 }
 
 .section-one .bot-right img {
-    max-width: 100%;
-    height: auto;
     max-height: 250px;
     min-width: 250px;
 }
